# hemut-frieght-marketplace

./: CLAUDE.md  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/signup/: page.tsx
components/: ui.tsx
features/auth/: AuthForm.tsx  AuthGate.tsx
features/bids/: BidActionsMenu.tsx  BidsView.tsx  BulkBidModal.tsx  PlaceBidModal.tsx  ViewEmailModal.tsx  emailTemplates.ts
features/loads/: LoadCard.tsx  LoadDetailDrawer.tsx  LoadFormModal.tsx  LoadSearchPanel.tsx  LoadsView.tsx  RouteMap.tsx
lib/: api.ts  auth.ts  format.ts  types.ts
server/: .env.example  .gitignore  pyproject.toml  seed.py  smoke_test.py
server/alembic/: env.py
server/alembic/versions/: 173786a3c066_add_broker_email_to_bids_cancelled_bid_.py  a57817c3352a_add_users_table.py  a62a042b7152_create_loads_stops_bids.py  f2fed101f030_add_bid_emails_conversation_history_.py
server/app/: main.py
server/app/api/: deps.py
server/app/api/v1/: auth.py  bids.py  loads.py
server/app/core/: config.py  database.py  logging.py  security.py
server/app/domain/: exceptions.py
server/app/domain/auth/: service.py
server/app/domain/bids/: service.py
server/app/domain/loads/: service.py
server/app/integrations/: email_provider.py  rate_suggestion_provider.py
server/app/models/: __init__.py  base.py  bid.py  bid_email.py  enums.py  load.py  stop.py  user.py
server/app/repositories/: bid_email_repository.py  bid_repository.py  load_repository.py  user_repository.py
server/app/schemas/: auth.py  bid.py  common.py  load.py  stop.py
