[project]
name = "freight-marketplace-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "bcrypt>=4.2",
    "email-validator>=2.2",
    "fastapi>=0.115",
    "greenlet>=3",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyjwt>=2.10",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.34",
]
